roles/my-use-case/files/platform/manifests/platform/argoconfig/workflows.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workflows
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
    - host: workflows.BASE_DOMAIN_PLACEHOLDER
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: workflows-argo-workflows-server
                port:
                  number: 2746
